[package]
name = "tlua"
version = "0.1.0"
edition = "2021"

[features]
trace_mem = []
trace_execution = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = '^0.4'
derive_more = '^0.99'
enum_dispatch = '^0.3'
ghost-cell = '^0.2'
hexf-parse = '^0.2'
indexmap = '^1.7'
internment = '^0.5'
nom = '^7.0'
nom_locate = '^4.0'
nom-supreme = '^0.6'
nom-tracable = '^0.8'
paste = '^1.0'
smallvec = '^1.0'
sys-locale = '^0.1'
take_mut = '^0.2'
thiserror = '^1.0'

[dependencies.bumpalo]
version = '^3.0'
features = [ "collections" ]

[dependencies.tracing]
version = '^0.1'
features = [ "attributes" ]

[dev-dependencies]
anyhow = '^1.0'
indoc = '^1.0'
pretty_assertions = '^1.0'
pretty_env_logger = '^0.4'
tracing-subscriber = '^0.3'