[package]
name = "tlua-bytecode"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = '^0.99'
indexmap = '^1.0'
num_enum = '^0.5'
paste = '^1.0'
thiserror = '^1.0'

[dependencies.bytemuck]
version = '^1.0'
features = [ "derive" ]

[dependencies.tlua-parser]
path = "../tlua-parser"

[dev-dependencies]
pretty_assertions = '^1.0'