[package]
name = "tlua-bytecode"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = '0.2.17'
derive_more = '0.99.17'
paste = '1.0.6'
thiserror = '1.0.30'

[dependencies.tlua-parser]
path = "../tlua-parser"