[package]
name = "tlua-compiler"
version = "0.1.0"
edition = "2021"
publish = false

[features]
trace_mem = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = '^0.99'
take_mut = '^0.2'
thiserror = '^1.0'

[dependencies.tlua-bytecode]
path = "../tlua-bytecode"

[dependencies.tlua-parser]
path = "../tlua-parser"

[dependencies.tracing]
version = '^0.1'
features = [ "attributes" ]

[dev-dependencies]
anyhow = '^1.0'
pretty_assertions = '^1.0'