[package]
name = "tlua-compiler"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = '0.99.17'
either = '1.6.1'
indexmap = '1.8.0'
scopeguard = '1.1.0'
take_mut = '0.2.2'
thiserror = '1.0.30'

[dependencies.strum]
version = '0.23.0'
features = [ "derive" ]

[dependencies.tlua-bytecode]
path = "../tlua-bytecode"

[dependencies.tlua-parser]
path = "../tlua-parser"

[dev-dependencies]
anyhow = '1.0.53'
pretty_assertions = '1.1.0'