[package]
name = "tlua-parser"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = [ "rendered-errors" ]
rendered-errors = [ "ariadne", "indexmap" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = '1.0.0'
bstr = '0.2.17'
combine = '4.6.3'
derive_more = '0.99.17'
hexf-parse = '0.2.1'
logos = '0.12.0'
nom = '7.1.0'
thiserror = '1.0.30'

[dependencies.bumpalo]
version = '3.9.1'
features = [ "collections" ]

[dependencies.strum]
version = '0.24.0'
features = [ "derive" ]

[dependencies.ariadne]
version = '0.1.3'
optional = true

[dependencies.indexmap]
version = '1.8.0'
optional = true

[dependencies.tlua-strings]
path = "../tlua-strings"

[dev-dependencies]
anyhow = '1.0.53'
indoc = '1.0.3'
pretty_assertions = '1.1.0'
pretty_env_logger = '0.4.0'
tracing-subscriber = '0.3.8'