[package]
name = "tlua"
version = "0.1.0"
edition = "2021"
readme = "../README.md"

[features]
trace_mem = []
trace_execution = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = '^0.99'
internment = '^0.5'
paste = '^1.0'
take_mut = '^0.2'
thiserror = '^1.0'
tracing-rc = '^0.1'

[dependencies.tracing]
version = '^0.1'
features = [ "attributes" ]

[dependencies.tlua-parser]
path = "../tlua-parser"

[dev-dependencies]
anyhow = '^1.0'
indoc = '^1.0'
pretty_assertions = '^1.0'
pretty_env_logger = '^0.4'
tracing-subscriber = '^0.3'